<?xml version="1.0"?>
<package format="3">
  <name>mqtt_ros</name>
  <version>0.0.1</version>
  <description>ROS2 node for bridge MQTT messages to ROS2 topics</description>
  <maintainer email="jgaleas@uma.es">Usuario</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclpy_action</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_default_generators</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>